force-app/main/default/objects/Opportunity/fields/Aprobacion_evaluacion__c.field-meta.xml
<CustomField>
    <fullName>Aprobacion_evaluacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobación evaluación</label>
    <type>Checkbox</type>
</CustomField>