force-app/main/default/objects/Opportunity/fields/Aprobacion_propuesta__c.field-meta.xml
<CustomField>
    <fullName>Aprobacion_propuesta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobación propuesta</label>
    <type>Checkbox</type>
</CustomField>