force-app/main/default/objects/Opportunity/fields/correlativo_propuesta__c.field-meta.xml
<CustomField>
    <fullName>correlativo_propuesta__c</fullName>
    <label>Correlativo de Propuestas</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>