force-app/main/default/objects/Opportunity/fields/Cotizaciones_abiertas__c.field-meta.xml
<CustomField>
    <fullName>Cotizaciones_abiertas__c</fullName>
    <description>Count de las quotes que estan en estado abiertas (borrador / revisión)</description>
    <label>Cotizaciones abiertas</label>
    <summaryFilterItems>
        <field>Quote.Status</field>
        <operation>equals</operation>
        <value>Borrador, Revisión</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>