force-app/main/default/objects/Opportunity/fields/Cotizaciones_aprobadas__c.field-meta.xml
<CustomField>
    <fullName>Cotizaciones_aprobadas__c</fullName>
    <label>Cotizaciones aprobadas</label>
    <summaryFilterItems>
        <field>Quote.Status</field>
        <operation>equals</operation>
        <value>Aprobado</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>