force-app/main/default/objects/Opportunity/fields/CuentaLeasing__c.field-meta.xml
<CustomField>
    <fullName>CuentaLeasing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta Leasing</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>