force-app/main/default/objects/Opportunity/fields/Descripci_n_producto__c.field-meta.xml
<CustomField>
    <fullName>Descripci_n_producto__c</fullName>
    <label>Descripción (producto)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>