force-app/main/default/objects/Opportunity/fields/DiasTr__c.field-meta.xml
<CustomField>
    <fullName>DiasTr__c</fullName>
    <description>Calcula la cantidad de días hábiles transcurridos (No descuenta feriados)</description>
    <formula>if
(
(ISPICKVAL(StageName,&quot;Cerrada Ganada&quot;) || ISPICKVAL(StageName,&quot;Cerrada Perdida&quot;)),Null,

(FLOOR((TODAY() - DATEVALUE( CreatedDate )) / 7) * 5)                       /* compute the number of complete workweeks         */
+ WEEKDAY(TODAY())                                                          /* add enddate&apos;s weekday                            */ 
- WEEKDAY(DATEVALUE(CreatedDate ))                                          /* subtract startdate&apos;s weekday                     */
+ MIN(MAX(WEEKDAY(DATEVALUE(CreatedDate )) - WEEKDAY(TODAY()), 0), 1) * 5   /* add 5 if startdate is later in week than enddate */
+ FLOOR(WEEKDAY(DATEVALUE(CreatedDate )) / 7)                               /* add 1 if startdate is a Saturday                 */
- FLOOR(WEEKDAY(TODAY()) / 7)
)</formula>
    <label>Días Transcurridos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>