force-app/main/default/objects/Opportunity/fields/Estado_de_la_Solicitud_de_Oferta__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_la_Solicitud_de_Oferta__c</fullName>
    <label>Estado de la Solicitud de Oferta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente de Asignación</fullName>
            </value>
            <value>
                <fullName>Asignado</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>