force-app/main/default/objects/Opportunity/fields/EstadoSAP__c.field-meta.xml
<CustomField>
    <fullName>EstadoSAP__c</fullName>
    <description>Esta es la lista de estado del proceso de compra en la integración SAP-Salesforce</description>
    <label>EstadoSAP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revisión</fullName>
                <default>true</default>
                <label>Revisión</label>
            </value>
            <value>
                <fullName>Aprobado para Venta</fullName>
            </value>
            <value>
                <fullName>Rechazado para Venta</fullName>
            </value>
            <value>
                <fullName>Pendiente de Facturación</fullName>
            </value>
            <value>
                <fullName>Facturado</fullName>
            </value>
            <value>
                <fullName>Anulado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>