force-app/main/default/objects/Opportunity/fields/Familia__c.field-meta.xml
<CustomField>
    <fullName>Familia__c</fullName>
    <label>Familia</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Motor</fullName>
            </value>
            <value>
                <fullName>Transmisión de potencia</fullName>
            </value>
            <value>
                <fullName>Equipos de levante</fullName>
                <label>Equipo de Levante</label>
            </value>
            <value>
                <fullName>Automatizacion</fullName>
                <label>Automatización</label>
            </value>
            <value>
                <fullName>Proyectos</fullName>
            </value>
            <value>
                <fullName>Variador de frecuencia</fullName>
                <label>Variador de Frecuencia</label>
            </value>
            <value>
                <fullName>Control y Maniobra</fullName>
            </value>
            <value>
                <fullName>Instrumentación</fullName>
            </value>
            <value>
                <fullName>Generador 12 a 50 KVA</fullName>
            </value>
            <value>
                <fullName>Generador 50 a 100 KVA</fullName>
            </value>
            <value>
                <fullName>Generador 100 a 250 KVA</fullName>
            </value>
            <value>
                <fullName>Generador 275 a 500 KVA</fullName>
            </value>
            <value>
                <fullName>Generador 500 a 1000 KVA</fullName>
            </value>
            <value>
                <fullName>Generador 1000 a 2000 KVA</fullName>
            </value>
            <value>
                <fullName>Generador 2000 a 4000 KVA</fullName>
            </value>
            <value>
                <fullName>Compresor nuevo</fullName>
            </value>
            <value>
                <fullName>Repuesto de compresor</fullName>
            </value>
            <value>
                <fullName>Mantención de compresor</fullName>
            </value>
            <value>
                <fullName>Mantención de generador</fullName>
            </value>
            <value>
                <fullName>Manual de generador</fullName>
            </value>
            <value>
                <fullName>Reparación de generador</fullName>
            </value>
            <value>
                <fullName>Repuesto de generador</fullName>
            </value>
            <value>
                <fullName>Tablero de transferencia automática</fullName>
            </value>
            <value>
                <fullName>Visita técnica generador</fullName>
            </value>
            <value>
                <fullName>Ficha tecnica generador</fullName>
            </value>
            <value>
                <fullName>Insumos para generador</fullName>
            </value>
            <value>
                <fullName>Kit de mantención</fullName>
            </value>
            <value>
                <fullName>Proyecto de Generación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>