force-app/main/default/objects/Opportunity/fields/Fecha_Correlativo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Correlativo__c</fullName>
    <label>Fecha Correlativo</label>
    <type>DateTime</type>
</CustomField>