force-app/main/default/objects/Opportunity/fields/Fecha_de_Entrega_Producto__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Entrega_Producto__c</fullName>
    <label>Fecha de Entrega (Producto)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>