force-app/main/default/objects/Opportunity/fields/Fecha_envio_Propuesta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_envio_Propuesta__c</fullName>
    <label>Fecha envío Propuesta</label>
    <type>DateTime</type>
</CustomField>