force-app/main/default/objects/Opportunity/fields/FechaEntrega__c.field-meta.xml
<CustomField>
    <fullName>FechaEntrega__c</fullName>
    <description>Fecha estimada de entrega de venta en caso de concretarse</description>
    <inlineHelpText>Fecha estimada de entrega de venta</inlineHelpText>
    <label>Fecha de entrega</label>
    <type>Date</type>
</CustomField>