force-app/main/default/objects/Opportunity/fields/FechaProduccion__c.field-meta.xml
<CustomField>
    <fullName>FechaProduccion__c</fullName>
    <description>Campo para generación, es la fecha que editara el encargado de producción para responder a una oportunidad en negoción a punto de cerrarse para estar ganada.</description>
    <inlineHelpText>Editable por 2 días después de su creación.</inlineHelpText>
    <label>Fecha de Producción</label>
    <type>Date</type>
</CustomField>