force-app/main/default/objects/Opportunity/fields/FuncionVendedor__c.field-meta.xml
<CustomField>
    <fullName>FuncionVendedor__c</fullName>
    <formula>CreatedBy.UserRole.Name</formula>
    <label>Funcion Vendedor</label>
    <type>Text</type>
</CustomField>