force-app/main/default/objects/Opportunity/fields/Hora_Cierre__c.field-meta.xml
<CustomField>
    <fullName>Hora_Cierre__c</fullName>
    <label>Hora Cierre</label>
    <type>DateTime</type>
</CustomField>