force-app/main/default/objects/Opportunity/fields/Imagenes_por_familia__c.field-meta.xml
<CustomField>
    <fullName>Imagenes_por_familia__c</fullName>
    <formula>CASE(
    TEXT(Familia__c),
    &quot;Motor&quot;,
        IMAGE(&quot;/servlet/servlet.FileDownload?file=015O5000009IVpl&quot;, &quot;Motor&quot;, 400, 400),
    &quot;Transmisión de potencia&quot;,
        IMAGE(&quot;/servlet/servlet.FileDownload?file=015O5000009IVxp&quot;, &quot;Transmisión de potencia&quot;, 400, 400),
    &quot;Equipos de levante&quot;,
        IMAGE(&quot;/servlet/servlet.FileDownload?file=015O5000009IW13&quot;, &quot;Equipos de levante&quot;, 400, 400),
    &quot;Automatizacion&quot;,
        IMAGE(&quot;/servlet/servlet.FileDownload?file=015O5000009IW5t&quot;, &quot;Automatizacion&quot;, 400, 400),
    &quot;Proyectos&quot;,
        IMAGE(&quot;/servlet/servlet.FileDownload?file=015O5000009IWlp&quot;, &quot;Proyectos&quot;, 400, 400),
    &quot;Variador de frecuencia&quot;, 
        IMAGE(&quot;/servlet/servlet.FileDownload?file=015O5000009IX3Z&quot;, &quot;Variador de frecuencia&quot;, 400, 400),
    IMAGE(&quot;/img/icon/t4v35/standard/product.svg&quot;, &quot;Sin imagen&quot;, 100, 100) /* valor por defecto */
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imagenes por familia</label>
    <type>Text</type>
</CustomField>