force-app/main/default/objects/Opportunity/fields/JefeProduccion__c.field-meta.xml
<CustomField>
    <fullName>JefeProduccion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jefe Producción</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>&quot;10 - Jefe Producción&quot;</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>OportunidadesProd</relationshipName>
    <type>Lookup</type>
</CustomField>