force-app/main/default/objects/Opportunity/fields/LineaDeNegocio__c.field-meta.xml
<CustomField>
    <fullName>LineaDeNegocio__c</fullName>
    <description>Línea de Negocio SAP</description>
    <label>Línea de Negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POR DEFECTO</fullName>
                <default>true</default>
                <label>POR DEFECTO</label>
            </value>
            <value>
                <fullName>10000 TRANSACCIONAL</fullName>
            </value>
            <value>
                <fullName>14000 EQUIPOS USADOS</fullName>
            </value>
            <value>
                <fullName>15000 PROYECTOS</fullName>
            </value>
            <value>
                <fullName>16000 CANAL TELEFONICO</fullName>
            </value>
            <value>
                <fullName>17000 CANAL KAM</fullName>
            </value>
            <value>
                <fullName>18000 ARRIENDOS AMOBLADOS</fullName>
            </value>
            <value>
                <fullName>19000 ARRIENDOS SIN AMOBLAR</fullName>
            </value>
            <value>
                <fullName>20000 FEE</fullName>
            </value>
            <value>
                <fullName>21000 RELACIONAL</fullName>
            </value>
            <value>
                <fullName>22000 SERVICIO</fullName>
            </value>
            <value>
                <fullName>99000 NUEVOS NEGOCIOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>