force-app/main/default/objects/Opportunity/fields/Motivo_de_rechazo__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_rechazo__c</fullName>
    <label>Motivo de rechazo</label>
    <type>TextArea</type>
</CustomField>