force-app/main/default/objects/Opportunity/fields/NombrePropietario__c.field-meta.xml
<CustomField>
    <fullName>NombrePropietario__c</fullName>
    <formula>Owner.FirstName &amp;&quot; &quot;&amp;  Owner.LastName</formula>
    <label>Nombre Propietario</label>
    <type>Text</type>
</CustomField>