force-app/main/default/objects/Opportunity/fields/Numero_de_licitacion__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_licitacion__c</fullName>
    <label>Número de licitación</label>
    <length>30</length>
    <type>Text</type>
</CustomField>