force-app/main/default/objects/Opportunity/fields/Numero_de_solicitudes_enviadas__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_solicitudes_enviadas__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Número de solicitudes enviadas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>