force-app/main/default/objects/Opportunity/fields/NumMes_FC__c.field-meta.xml
<CustomField>
    <fullName>NumMes_FC__c</fullName>
    <formula>MONTH(DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NMes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>