force-app/main/default/objects/Opportunity/fields/Oferta_enviada__c.field-meta.xml
<CustomField>
    <fullName>Oferta_enviada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oferta enviada</label>
    <type>Checkbox</type>
</CustomField>