force-app/main/default/objects/Opportunity/fields/Portal__c.field-meta.xml
<CustomField>
    <fullName>Portal__c</fullName>
    <label>Portal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Achilles</fullName>
            </value>
            <value>
                <fullName>Aguas Antofagasta</fullName>
            </value>
            <value>
                <fullName>Aguas Nuevas</fullName>
            </value>
            <value>
                <fullName>Ariba</fullName>
            </value>
            <value>
                <fullName>Artikos</fullName>
            </value>
            <value>
                <fullName>Asmar</fullName>
            </value>
            <value>
                <fullName>Bhp</fullName>
            </value>
            <value>
                <fullName>Coupa</fullName>
            </value>
            <value>
                <fullName>Enap</fullName>
            </value>
            <value>
                <fullName>Enel</fullName>
            </value>
            <value>
                <fullName>Exiros</fullName>
            </value>
            <value>
                <fullName>Fairmarket</fullName>
            </value>
            <value>
                <fullName>I-Construye</fullName>
            </value>
            <value>
                <fullName>Jaggaer</fullName>
            </value>
            <value>
                <fullName>Mercado Publico Chile Compra</fullName>
            </value>
            <value>
                <fullName>Metro</fullName>
            </value>
            <value>
                <fullName>Ryce</fullName>
            </value>
            <value>
                <fullName>Senegocia</fullName>
            </value>
            <value>
                <fullName>Unilink</fullName>
            </value>
            <value>
                <fullName>Weber</fullName>
            </value>
            <value>
                <fullName>Wherex</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>