force-app/main/default/objects/Opportunity/fields/Presupuestos__c.field-meta.xml
<CustomField>
    <fullName>Presupuestos__c</fullName>
    <description>Saber cuantos presupuestos creados tiene la oportunidad</description>
    <inlineHelpText>Presupuestos asociados a la oportunidad</inlineHelpText>
    <label>Presupuestos</label>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>