force-app/main/default/objects/Opportunity/fields/Probabilidad_Cierre_de_Ejecutivo__c.field-meta.xml
<CustomField>
    <fullName>Probabilidad_Cierre_de_Ejecutivo__c</fullName>
    <defaultValue>0.10</defaultValue>
    <label>Probabilidad Cierre de Ejecutivo</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>