force-app/main/default/objects/Opportunity/fields/RazonPerdida__c.field-meta.xml
<CustomField>
    <fullName>RazonPerdida__c</fullName>
    <label>Razón Perdida</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oferta solo presupuestaria</fullName>
            </value>
            <value>
                <fullName>Problemas de stock</fullName>
            </value>
            <value>
                <fullName>Tiempo de entrega</fullName>
            </value>
            <value>
                <fullName>Datos mal ingresados en sistema</fullName>
            </value>
            <value>
                <fullName>Precio</fullName>
            </value>
            <value>
                <fullName>Cliente elige a competencia</fullName>
            </value>
            <value>
                <fullName>Cliente prefiere otra marca</fullName>
            </value>
            <value>
                <fullName>Cliente no acepta alternativa</fullName>
            </value>
            <value>
                <fullName>Cliente con problemas de crédito</fullName>
            </value>
            <value>
                <fullName>Falta presupuesto</fullName>
            </value>
            <value>
                <fullName>Presentación fuera de plazo</fullName>
            </value>
            <value>
                <fullName>Costo de despacho</fullName>
            </value>
            <value>
                <fullName>Inactiva</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>