force-app/main/default/objects/Opportunity/fields/Rechazado_por__c.field-meta.xml
<CustomField>
    <fullName>Rechazado_por__c</fullName>
    <label>Rechazado por</label>
    <length>255</length>
    <type>Text</type>
</CustomField>