force-app/main/default/objects/Opportunity/fields/Responsable_Propuestas__c.field-meta.xml
<CustomField>
    <fullName>Responsable_Propuestas__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable Propuestas</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>