force-app/main/default/objects/Opportunity/fields/Solicitud_de_oferta_Enviada__c.field-meta.xml
<CustomField>
    <fullName>Solicitud_de_oferta_Enviada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solicitud de oferta Enviada</label>
    <type>Checkbox</type>
</CustomField>