force-app/main/default/objects/Opportunity/fields/TipoServicio__c.field-meta.xml
<CustomField>
    <fullName>TipoServicio__c</fullName>
    <label>Tipo de Servicio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mantención Preventiva</fullName>
            </value>
            <value>
                <fullName>Mantención Correctiva</fullName>
            </value>
            <value>
                <fullName>Venta de Mesón</fullName>
            </value>
            <value>
                <fullName>Contrato</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
                <default>true</default>
                <label>Otros</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>