force-app/main/default/objects/Opportunity/fields/Top_Oportunidades__c.field-meta.xml
<CustomField>
    <fullName>Top_Oportunidades__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top Oportunidades</label>
    <type>Checkbox</type>
</CustomField>