force-app/main/default/objects/Opportunity/fields/Variable_principal_para_cerrar_negocio__c.field-meta.xml
<CustomField>
    <fullName>Variable_principal_para_cerrar_negocio__c</fullName>
    <label>Variable principal para cerrar negocio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>